--- a/css/users.css
+++ b/css/users.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #423064;
+    background-color: lightgray;
 }
 
 nav ul {
@@ -56,6 +56,7 @@ main {
     text-align: center;
     margin-left: 1em;
     border-radius: 0.5em;
+    box-shadow: 0px 0px 15px 0px #7049bd;
 }
 
 .box-add .image {
@@ -97,6 +98,7 @@ button {
     text-align: center;
     margin: 1em 0 0 1em;
     border-radius: 0.5em;
+    box-shadow: 0px 0px 15px 0px #7049bd;
 }
 
 .box-user .image img {
