--- a/css/users.css
+++ b/css/users.css
@@ -62,12 +62,19 @@ main {
     box-shadow: 0px 0px 15px 0px #7049bd;
 }
 
-.box-add .image {
+.box-add #picture {
     width: 100px;
     height: 100px;
     background-color: #7049bd;
+    background-size: cover;
+    background-position: center center;
     margin: 0.5em auto 0;
     border-radius: 50%;
+    cursor: pointer;
+}
+
+.dragging {
+    background-image: none!important;
 }
 
 input {
@@ -82,12 +89,23 @@ input:focus {
     outline: none;
 }
 
+.input-field {
+    background: url(/img/text-input.png) no-repeat scroll 195px -1px;
+    background-size: 20px;
+}
+
+#mediaFile {
+    position: absolute;
+    left: -500px;
+}
+
 button {
     padding: 0.5em 2em;
     background-color: #7049bd;
     color: white;
     border: none;
     border-radius: 0.5em;
+    cursor: pointer;
 }
 
 .box-user {
