--- a/css/store.css
+++ b/css/store.css
@@ -53,11 +53,11 @@ main {
     margin-left:100px;
 }
 
-.box-add {
+#box-add {
     display: inline-block;
     color: black;
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
     background-color: #7049bd;
     text-align: center;
     margin-left: 1em;
@@ -66,8 +66,8 @@ main {
     box-shadow: 0px 0px 15px 0px #7049bd;
     position: relative;
 }
-.box-add .image{
-    
+#box-add #add-image{
+    cursor: pointer;
     position: absolute;
     top:50%;
     left: 50%;
@@ -85,30 +85,173 @@ button {
     border-radius: 0.5em;
 }
 
-.box-moments {
+.box-monum {
     display: inline-block;
     font-size: large;
     color: black;
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
     min-width: 300px;
     text-align: center;
-    background: url("../img/nn.jpg");
-    background-position: center;
-    background-position: -10px -40px;
+    
     margin: 1em 0 0 1em;
     border-radius: 0.5em;
     box-shadow: 0px 0px 15px 0px #7049bd;
     position: relative;
 }
-.box-moments .info1 {
-    position: absolute;
+
+.box-monum .infos {
+    opacity: 0;
 }
+
 input {
     font-size: large;
     display: block;
     margin: 1.5em auto;
     border: none;
     border-bottom: 1px solid #7049bd;
+}
+
+
+.titre {
+    position: absolute;
+    top: -.5em;
+    left: 0.75em;
+}
+.location {
+    position: absolute;
+    top: 2.5em;
+    left: 0.75em;
+}
+
+.description {
+    position: absolute;
+    top: 5.5em;
+    left: 0.75em;
+}
+
+.prix {
+    position: absolute;
+    top: 18em;
+    left: 0.75em;
+}
+
+.copies {
+    position: absolute;
+    top: 18em;
+    left: 11.5em;
+}
+
+.image {
+    position: absolute;
+    top: 11em;
+    left: 0.75em;
+}
+
+.prix-input, .copies-input {
+    background: none;
     text-align: center;
+    outline: none;
+    border: none;
+    width: 180px;
+    cursor: context-menu;
+}
+
+
+.titre-input , .location-input, .description-input {
+    resize: none;
+    background: none;
+    color: white;
+    border: none;
+    outline: none;
+    cursor: context-menu;
+}
+
+.titre-input::placeholder , .location-input::placeholder, .prix-input::placeholder, .copies-input::placeholder {
+    color: white;
+}
+
+
+.titre-add {
+    position: absolute;
+    top: -.5em;
+    left: 0.75em;
+}
+.location-add {
+    position: absolute;
+    top: 3em;
+    left: 0.75em;
+}
+
+.description-add {
+    position: absolute;
+    top: 6em;
+    left: 0.75em;
+}
+
+.prix-add {
+    position: absolute;
+    top: 20em;
+    left: 0.75em;
+}
+
+.copies-add {
+    position: absolute;
+    top: 20em;
+    left: 12.5em;
+}
+
+.image-add {
+    position: absolute;
+    top: 18em;
+    left: 0.75em;
+}
+
+.image-input-add {
+    font-size: small;
+}
+
+.prix-input-add, .copies-input-add {
+    background: lightgray;
+    text-align: center;
+    outline: none;
+    border: none;
+    width: 180px;
+}
+
+
+.titre-input-add , .location-input-add, .description-input-add {
+    resize: none;
+    background: lightgray;
+    border: none;
+    outline: none;
+}
+
+.titre-input-add, .titre-input {
+    width: 370px;
+    font-size: x-large;
+}
+
+.location-input-add, .location-input {
+    width: 150px;
+    font-size: small;
+}
+
+
+#create-form {
+    display: none;
+}
+
+#create-button {
+    position: absolute;
+    top: -1em;
+    left: 20.5em;
+    z-index: 20;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    padding: 0;
+    font-size: large;
+    font-weight: bolder;
+    cursor: pointer;
 }
