--- a/css/users.css
+++ b/css/users.css
@@ -141,3 +141,9 @@ button {
 .box-user .nb-contr {
     color: gray;
 }
+
+.head{
+    margin-left:100px;
+    color:#7049bd ;
+    font-weight: bold;
+}
