--- a/css/store.css
+++ b/css/store.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+
 * {
     margin: 0;
     padding: 0;
@@ -6,49 +8,44 @@
 body {
     background-color: lightgray;
 }
+a {
+    text-decoration: none;
+}
 
-nav ul {
-    color: white;
-    width: 80px;
+.side-nav {
     background-color: #7049bd;
+    text-align: center;
+    width: 80px;
     height: 100vh;
     position: fixed;
     left: 0;
     top: 0;
+    padding-top: 2em;
+}
+
+nav ul {
+    color: white;
+    padding-top: 3em;
     list-style-type: none;
     text-align: center;
 }
 
 nav ul li {
-    margin-top: 2em;
+    margin-top: 1em;
+    cursor: context-menu;
 }
 
-.icon-store, .icon-users, .icon-info, .icon-logout {
-    display: none;
-}
-
-#store:hover + .icon-store{
-    display: block;
-} 
-#users:hover + .icon-users{
-    display: block;
-
-} 
-#info:hover + .icon-info{
-    display: block;
-
-} 
-#logout:hover + .icon-logout{
-    display: block;
-
-} 
-.icon:hover{
-    transform: scale(1.2);
+.menu-text {
+    font-size: small;
+    color: white;
+    opacity: 0;
+    margin-top: -0.5em;
 }
 
 main {
     padding-left: 90px;
 }
+
 .head{
     margin-left:100px;
     color: #7049bd;
